# rcx-tk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  cli_rcx-tk.py  next_steps.md  project_setup.md  pyproject.toml  sonar-project.properties
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  markdown-link-check.yml  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
src/rcx_tk/: __init__.py  __main__.py  alkanes.py  io.py  msdial.py  my_module.py  process_metadata_file.py  sequence.py  utils.py
tests/: conftest.py  test_alkanes.py  test_io.py  test_msdial.py  test_my_module.py  test_process_metadata_file.py  test_sequence.py  test_special_characters.py  test_utils.py
tests/test_data/: batch_specification1.csv  batch_specification1.prn  batch_specification1.xlsx  invalid_metadata.txt
