[tool.poetry]
name = "rcx-tk"
version = "0.1.0"
description = "This package adjusts and cleans the metadata file provided by a user."
authors = ["Your Name <you@example.com>"]
license = "GPL-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
bump-my-version = "^0.23.0"
coverage = "^7.5.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.1.1"
tox = "^4.15.1"
myst-parser = "^3.0.1"
twine = "^5.1.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
