[tool.poetry]
name = "rcx-tk"
version = "0.1.0"
description = "This package adjusts and cleans the metadata file provided by a user."
authors = ["Zargham Ahmad <zargham.ahmad@recetox.muni.cz>" ]
license = "MIT"
readme = "README.md"
keywords = ["metadata", "alkanes", "metabolomics"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyxlsx = "^1.1.3"

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
bump-my-version = "^0.23.0"
coverage = "^7.5.3"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"
Sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.1.1"
tox = "^4.15.1"
myst-parser = "^3.0.1"
twine = "^5.1.0"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
    "F",  # Pyflakes
    "E",  # pycodestyle (error)
    "W",    # pycodestyle (warning)
    # "C90",  # mccabe
    "I",    # isort
    "D",    # pydocstyle
    # "PL",   # Pylint
    # "PLC",  # Convention
    # "PLE",  # Error
    # "PLR",  # Refactor
    # "PLW",  # Warning

]
lint.ignore = [
    'D100',  # Missing module docstring
    'D104',  # Missing public package docstring
    # The following list excludes rules irrelevant to the Google style
    'D203',
    'D204',
    'D213',
    'D215',
    'D400',
    'D401',
    'D404',
    'D406',
    'D407',
    'D408',
    'D409',
    'D413',
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "scripts",
]
lint.per-file-ignores = {}


# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py39"
line-length = 120

[tool.ruff.lint.isort]
known-first-party = ["rcx_tk"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/rcx_tk/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"

[[tool.bumpversion.files]]
filename = "docs/conf.py"        